unpackaged/main/default/objects/CYRIL_Invoice_Line_Types__mdt/CYRIL_Invoice_Line_Types__mdt.object-meta.xml
<CustomObject>
    <label>CYRIL Order Type Sets</label>
    <pluralLabel>CYRIL Order Type Sets</pluralLabel>
</CustomObject>