unpackaged/main/default/objects/CYRIL_Invoice_Line_Types__mdt/fields/Column_1_Span__c.field-meta.xml
<CustomField>
    <fullName>Column_1_Span__c</fullName>
    <description>Min of 1, Max is 12.</description>
    <label>Column 1 Span</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>