unpackaged/main/default/objects/CYRIL_Invoice_Line_Types__mdt/fields/Column_1_Title__c.field-meta.xml
<CustomField>
    <fullName>Column_1_Title__c</fullName>
    <label>Column 1 Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>