unpackaged/main/default/objects/CYRIL_Invoice_Line_Types__mdt/fields/Column_2_Span__c.field-meta.xml
<CustomField>
    <fullName>Column_2_Span__c</fullName>
    <label>Column 2 Span</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>