unpackaged/main/default/objects/CYRIL_Invoice_Line_Types__mdt/fields/Column_3_Field__c.field-meta.xml
<CustomField>
    <fullName>Column_3_Field__c</fullName>
    <label>Column 3 Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>