unpackaged/main/default/objects/CYRIL_Invoice_Line_Types__mdt/fields/Set_Group__c.field-meta.xml
<CustomField>
    <fullName>Set_Group__c</fullName>
    <label>Set Group</label>
    <referenceTo>CYRIL_Order_Set_Group__mdt</referenceTo>
    <relationshipLabel>Order Type Sets</relationshipLabel>
    <relationshipName>CYRIL_Order_Type_Sets</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>