unpackaged/main/default/objects/CYRIL_Invoice_Line_Types__mdt/fields/SOQL_Conditions__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Conditions__c</fullName>
    <label>SOQL Conditions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>