unpackaged/main/default/objects/CYRIL_Invoice_Line_Types__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order Lines</fullName>
                <default>true</default>
                <label>Order Lines</label>
            </value>
            <value>
                <fullName>Order Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>